<resources>
    <string name="update_network_fail">Network connection error.</string>
    <string name="update_network_fail_message">Reinstall network and relaunch application.</string>
    <string name="update_network_fail_message2">Swipe down to refresh.</string>
    <string name="base_downloading">Loading file, please wait....</string>
    <string name="base_download_fail">File download failed.</string>
    <string name="base_update_bt_ok">Yes</string>
    <string name="base_update_bt_no">No</string>

    <string name="appsflyer_api_key">SrmdaiBL8MEAoEk4CkQShE</string>
    <string name="code_app">68354</string>


    <string name="succes_purchase_message">Your version is currently the Premium version. Thank you for your purchase!</string>
    <string name="inapp_billing_upgrade_title">Upgrade Now</string>

    <string name="inapp_billing_ads_title">No Ads</string>
    <string name="inapp_billing_ads_message">Permanently remove ads for all locations</string>

    <string name="inapp_billing_support_title">Safety &amp; Security</string>
    <string name="inapp_billing_support_message">Protect your messages, call phone with a PIN lock or Fingerprint or Pattern</string>

    <string name="inapp_billing_update_title">Update</string>
    <string name="inapp_billing_update_message">Priority is given to receiving new updates as soon as possible</string>

    <string name="inapp_billing_data_title">Data</string>
    <string name="inapp_billing_data_message">Keep the information, data absolutely safe</string>


    <string name="inapp_billing_function_lock_title">Locked function</string>
    <string name="inapp_billing_function_lock_message">This feature is only available on Pro version. This feature allows you to protect your messages, call phone with a PIN lock or Fingerprint or Pattern. Please upgrade to Pro to use this feature and many advanced features. Thank you!</string>

</resources>
