<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D3F46">

    <ImageView
        android:id="@+id/ivBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/upgrade_premium_bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/ivBanner"
        android:layout_alignTop="@+id/ivBanner">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_close_white_24dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ivClose">

            <TextView
                android:id="@+id/tvTitleUpgradePremium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlOk"
        android:layout_below="@+id/ivBanner"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivRemoveAds"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:src="@drawable/upgrade_premium_remove_ads" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/ivRemoveAds"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/inapp_billing_ads_title"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:maxLines="2"
                    android:minLines="2"
                    android:text="@string/inapp_billing_ads_message"
                    android:textColor="#BBBBBB" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivSupport"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_account_circle_green_a700_48dp" />

            <ImageView
                android:layout_width="33dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ivSupport"
                android:layout_alignRight="@+id/ivSupport"
                android:adjustViewBounds="true"
                android:src="@drawable/upgrade_premium_tag" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/ivSupport"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/inapp_billing_support_title"

                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:maxLines="2"
                    android:minLines="2"
                    android:text="@string/inapp_billing_support_message"
                    android:textColor="#BBBBBB" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivUpdate"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_update_blue_a700_48dp" />

            <ImageView
                android:layout_width="33dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ivUpdate"
                android:layout_alignRight="@+id/ivUpdate"
                android:adjustViewBounds="true"
                android:src="@drawable/upgrade_premium_tag" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/ivUpdate"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/inapp_billing_update_title"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:maxLines="2"
                    android:minLines="2"
                    android:text="@string/inapp_billing_update_message"
                    android:textColor="#BBBBBB" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivCheckData"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:src="@drawable/upgrade_premium_data" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/ivCheckData"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/inapp_billing_data_title"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:maxLines="2"
                    android:minLines="2"
                    android:text="@string/inapp_billing_data_message"
                    android:textColor="#BBBBBB" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom">

        <TextView
            android:id="@+id/tvOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/upgrade_premium_bt"
            android:text="@string/inapp_billing_upgrade_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/tvOk"
            android:layout_alignTop="@+id/tvOk"
            android:layout_marginRight="-55dp"
            android:background="@drawable/upgrade_premium_tag_2"
            android:rotation="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="  2.99$ "
                android:textColor="#FFFF00" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
